tests/integration/commands/snapshots/integration__commands__check__array_open.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
[
stdout ---

stderr ---
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:1:1
  |
1 | [
  | ^
  | |
  | expected due to `[`
  |
help: insert the missing closed delimiter `]`
  |
1 | []
  |  +
