tests/integration/commands/snapshots/integration__commands__check__empty_input.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---

stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:1:1
  |
1 |
  | ^
  |
help: insert a placeholder value
  |
1 |  "rust is a must"
  |
