tests/integration/commands/snapshots/integration__commands__check__invalid_hex_digit_in_escape.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
"\u1FZA"
stdout ---

stderr ---
error: expected hex digit 3 of 4 in escape, found `Z`
 --> stdin:1:6
  |
1 | "\u1FZA"
  | ---  ^
  | ||
  | |\u escape started here
  | opening quote found here
