tests/integration/commands/snapshots/integration__commands__check__object_missing_colon.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi"    
stdout ---

stderr ---
error: expected colon after key, found no significant characters
 --> stdin:1:5
  |
1 | {"hi"    
  |  ---^
  |  |
  |  expected due to `"hi"`
  |
help: insert colon, placeholder value, and closing curly brace
  |
1 | {"hi": "garlic bread" }    
  |      ++++++++++++++++++
