tests/integration/commands/snapshots/integration__commands__check__object_missing_comma_or_closing_with_whitespace.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi": null     
stdout ---

stderr ---
error: expected comma or closed curly brace, found no significant characters
 --> stdin:1:11
  |
1 | {"hi": null     
  | -    -----^
  | |    |
  | |    expected due to the preceding key/value pair
  | object opened here by `{`
  |
help: insert the missing closed brace
  |
1 | {"hi": null}     
  |            +
