tests/integration/commands/snapshots/integration__commands__check__object_with_line_break_value.snap
---
source: tests/integration/commands/check.rs
expression: output
---
args: ["check"]
status: 1
success: false
stdin ---
{"hi": "line
break"}
stdout ---

stderr ---
error: unexpected unescaped control character `\n` in string literal
 --> stdin:1:13
  |
1 |   {"hi": "line
  |  _____________^
2 | | break"}
  | |_^
  |
help: replace the control character with its escaped form
  |
1 | {"hi": "line\nbreak"}
  |             ++
